# Transcription-service

./: .env.example  .gitignore  .pyre_configuration  README.md  benchmark_dualpass.py  migrate_old_outputs.py  pyproject.toml  regenerate_summaries.py  repair_outputs.py  requirements.txt  run.py  server.py  setup.sh
audit knowledge base/: Call Script- DRP- Hinglish.docx  Call Script- Sales- DRP-English.docx  Objections Answers Updated- CS.docx
docs/audit_knowledge_base/: Sales Call Checklist-DRP.docx
docs/superpowers/plans/: 2026-04-20-frontend-revamp.md
docs/superpowers/specs/: 2026-04-20-call-chaining-slice-1-design.md  2026-04-20-frontend-revamp-design.md  2026-04-20-transcript-citation-redirection-fix-design.md  2026-04-21-chain-summary-slice-2-design.md  2026-04-21-history-sort-tabs-auth-design.md
pipeline/: __init__.py  audio_compat.py  auth.py  chain.py  config.py  diarize.py  emotion.py  insights.py  preprocess.py  reconstruct.py  sarcasm.py  transcribe.py  triggers.py  utils.py  vad.py
pipeline/advanced_diarization/: __init__.py  clustering.py  embedding.py  refinement.py  segmenter.py  validation.py
scripts/: compare.py  regenerate_summaries.py  repair_outputs.py
static/: index.html
tests/: test_auth.py  test_chain.py  test_chain_summary.py  test_citation_resolver.py  test_citation_resolver_adversarial.py
